kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: paste
  labels:
    app: paste
  namespace: paste
spec:
  ports:
    - targetPort: http
      port: 80
      name: http
    - name: http-exporter
      port: 9113
      protocol: TCP
      targetPort: http-exporter
  type: ClusterIP
  selector:
    app: paste
